--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,16 @@
 
     <nav>
       <div class="nav-list">
+
         <% if current_user %>
             <p><%= link_to "Profile", user_path(current_user)%></p>
+            <p><%= link_to "Campaigns", candidates_path%></p>
             <p><%= link_to "Log Out", logout_path%></p>
         <% else %>
             <p><%= link_to "Sign Up", signup_path%></p>
             <p><%= link_to "Log In", login_path%></p>
         <% end %>
+        <img src="https://files.slack.com/files-pri/T02MD9XTF-FMB95L6P3/your_primary_source_logo__1_.png" alt="">
       </div>
     </nav>
 
