--- a/app/views/policies/show.html.erb
+++ b/app/views/policies/show.html.erb
@@ -2,14 +2,15 @@
 <h2>Category: <%=@policy.category%></h2>
 <h3>Description: <%=@policy.description%></h3>
 
-<h2><% @policy.candidates.each do |candidate|%>
+<h2 ><% @policy.candidates.each do |candidate|%>
     Candidate: <%= link_to candidate.name, candidate_path(candidate)%>
 <% end %></h2>
 
-<h3>Posts: <% @policy.posts.each do |post|%></h3>
+<h3>Posts: <% @policy.posts.reverse.each do |post|%></h3>
   <p>Author: <%= link_to post.user.full_name, user_path(post.user) %></p>
   <p>Title: <%= link_to post.title, post_path(post) %></p>
-  <p>Content: <%= post.content%></p>
+  <p>Content: <%= post.content%></p><br>
+  <span>_______________</span>
 <% end %>
 
 <%= form_tag("/posts/new", method: "get") do %>
