--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,9 @@
             <p><%= link_to "Sign Up", signup_path%></p>
             <p><%= link_to "Log In", login_path%></p>
         <% end %>
-        <img src="https://files.slack.com/files-pri/T02MD9XTF-FMB95L6P3/your_primary_source_logo__1_.png" alt="">
+        <figure>
+          <img class="logo" src="https://files.slack.com/files-pri/T02MD9XTF-FMB95L6P3/your_primary_source_logo__1_.png" alt="">
+        </figure>
       </div>
     </nav>
 
