--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,19 +14,61 @@
  *= require_self
  */
 
-
  html {
    box-sizing: border-box;
+ }
+
+ h1 {
+   font-family: 'Minion Pro', serif;
+   font-weight: lighter;
+   font-size: 42px;
+ }
+
+ h2 {
+   font-family: 'Brandon Grotesque', sans-serif;
+   font-weight: lighter;
+ }
+
+ h3 {
+   font-family: 'Garamond', serif;
+   font-size: 22px;
+   font-weight: lighter;
+   text-decoration: none;
+   font-style: italic;
+   color: black;
+ }
+
+ h3 a {
+   font-family: 'Garamond', serif;
+   font-size: 22px;
+   font-weight: lighter;
+   text-decoration: none;
+   font-style: italic;
+   color: black;
+ }
+
+ h3 a:hover {
+   color: blue;
+   font-size: 23px;
+ }
+
+ body {
+   font-family: 'NYT Imperial', sans-serif;
+   font-weight: lighter;
+   text-align: center;
  }
 
  .nav_bar {
    display: flex;
    justify-content: space-between;
    width: 100%;
+   border-bottom-style: double;
+   border-bottom-color: rgb(21, 21, 21, 0.1);
  }
 
  .nav_bar .nav-list {
-   margin: 10px;
+   margin-left: 100px;
+   margin-right: 100px;
  }
 
  .nav-list h1 {
@@ -39,40 +81,92 @@
    width: 150%;
  }
 
-h1 {
-  font-family: 'Minion Pro', serif;
-  font-weight: lighter;
+ p.nav_item a {
+   padding: 8px;
+   text-decoration: none;
+   border-radius: 3px;
+   color: rgb(12, 105, 235, 0.5);
+ }
+
+ p.nav_item a:hover {
+   background-color:rgb(153, 204, 255, 0.2);
+   color: black;
+ }
+
+.candidate_cards {
+  display:flex;
+  justify-content: space-around;
+  flex-flow: row wrap;
+  padding: 0;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
-
-h2 {
-  font-family: 'Brandon Grotesque', sans-serif;
-  font-weight: lighter;
+.card-image {
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+  margin: 4px;
+  margin-bottom: 10px;
 }
 
-h3 {
-  font-family: 'Garamond', serif;
-  font-size: 22px;
-  font-weight: lighter;
+.card-image .img {
+  height: 350px;
+  width: 242px;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.card-image:hover {
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.3),0 2px 10px 0 rgba(0,0,0,0.25);
+}
+
+.candidate_container {
+  margin: 30px;
+  display:flex;
+  justify-content: space-between;
+}
+
+.candidate_title {
+  margin-top: -46px;
+}
+
+.candidate_basics {
+  border: 1px solid rgb(21, 21, 21, 0.1);
+  width: 30%;
+}
+
+.candidate_policies {
+  border: 1px solid rgb(21, 21, 21, 0.1);
+  width: 30%;
+}
+
+.candidate_articles {
+  border: 1px solid rgb(21, 21, 21, 0.1);
+  width: 30%;
+}
+
+.text-justify {
+  text-align: justify;
+  margin: 20px;
+}
+
+/* TWITTER BUTTON */
+.fa {
+  padding: 15px;
+  font-size: 20px;
+  width: 20px;
+  text-align: center;
   text-decoration: none;
-  font-style: italic;
-  color: black;
+  border-radius: 50%;
 }
 
-h3 a {
-  font-family: 'Garamond', serif;
-  font-size: 22px;
-  font-weight: lighter;
-  text-decoration: none;
-  font-style: italic;
-  color: black;
+.fa:hover {
+  opacity: 0.7;
 }
 
-h3 a:hover {
-  color: blue;
-}
-
-body {
-  font-family: 'NYT Imperial', sans-serif;
-  font-weight: lighter;
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
 }
