--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -1,13 +1,11 @@
-<h1>All Candidates</h1>
-
-<% @candidates.each do |candidate|%>
-
-  <h2><%=link_to candidate.name, candidate_path(candidate)%></h2>
-  <p>Age: <%= candidate.age%></p>
-  <p>Bio:<%= candidate.bio%></p>
-  <p>Years In Government:<%= candidate.years_in_government%></p>
-  <p>Party:<%= candidate.party%></p>
-  <p>Current Position: <%= candidate.current_position%></p>
-  <p>State: <%= candidate.state%></p>
-  <a target="_blank" href="<%=candidate.website%>" >Website</a>
-<% end%>
+<h2>All Candidates</h2>
+    <div class= "candidate_cards">
+      <% @candidates.each do |candidate|%>
+          <div class="card-image">
+              <a href="/candidates/<%=candidate.id%>"><div class="img" style="background-image:url(<%=candidate.image%>);"></div></a>
+            <div class="card-body">
+              <p><%=candidate.name%></p>
+            </div>
+          </div>
+    <% end%>
+  </div>
