--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,10 +27,9 @@
           </div>
         </div>
       </div>
-
-      <img class="nav-list" src="https://user-images.githubusercontent.com/48773391/63361852-1f25e580-c32e-11e9-82a0-d7d627fad339.png" alt="">
     </nav>
 
+    <img class="main_logo" src="https://user-images.githubusercontent.com/47403119/63399912-3b0da380-c38f-11e9-910d-5c1b6471f90c.png" alt="Primary Source Logo">
 
     <% flash.each do |name, msg|%>
       <%= content_tag :div, msg.html_safe%>
