--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -64,7 +64,7 @@
    justify-content: space-between;
    width: 100%;
    border-bottom-style: double;
-   border-bottom-color: rgb(21, 21, 21, 0.1);
+   border-bottom-color: rgba(21, 21, 21, 0.1);
    position: fixed;
    background-color: #fff;
  }
@@ -92,11 +92,11 @@
    padding: 8px;
    text-decoration: none;
    border-radius: 3px;
-   color: rgb(12, 105, 235, 0.5);
+   color: rgba(12, 105, 235, 0.5);
  }
 
  p.nav_item a:hover {
-   background-color:rgb(153, 204, 255, 0.2);
+   background-color:rgba(153, 204, 255, 0.2);
    color: black;
  }
 
@@ -110,7 +110,7 @@
 }
 
 .card-image {
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+  box-shadow: 0 2px 5px 0 rgbaa(0,0,0,0.16),0 2px 10px 0 rgbaa(0,0,0,0.12);
   margin: 4px;
   margin-bottom: 10px;
 }
@@ -126,7 +126,7 @@
 }
 
 .card-image:hover {
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.3),0 2px 10px 0 rgba(0,0,0,0.25);
+  box-shadow: 0 2px 5px 0 rgbaa(0,0,0,0.3),0 2px 10px 0 rgbaa(0,0,0,0.25);
 }
 
 .candidate_container {
@@ -140,17 +140,17 @@
 }
 
 .candidate_basics {
-  border: 1px solid rgb(21, 21, 21, 0.1);
+  border: 1px solid rgba(21, 21, 21, 0.1);
   width: 30%;
 }
 
 .candidate_policies {
-  border: 1px solid rgb(21, 21, 21, 0.1);
+  border: 1px solid rgba(21, 21, 21, 0.1);
   width: 30%;
 }
 
 .candidate_articles {
-  border: 1px solid rgb(21, 21, 21, 0.1);
+  border: 1px solid rgba(21, 21, 21, 0.1);
   width: 30%;
 }
 
