--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -2,6 +2,11 @@
       <h1 class="candidate_title"><%=@candidate.name%></h1>
       <a target="_blank" href=<%=@candidate.twitter%> class="fa fa-twitter"></a>
 
+      <%= form_for @article do |f| %>
+        <input type="hidden" name="candidate[id]" value="<%=@candidate.id%>">
+        <%=f.submit "Refresh"%>
+      <% end %>
+
     <div class="candidate_container">
 
         <div class="candidate_basics">
@@ -23,10 +28,12 @@
 
         <div class="candidate_articles">
           <h2>Recent Articles</h2>
-            <% @candidate.policies.each do |policy|%>
-                <h3>Policy: <%= link_to policy.title, policy_path(policy)%></h3>
-                <p>Category: <%= policy.category%></p>
-                <p>Description: <%= policy.description%></p>
+            <% @candidate.articles.each do |article|%>
+                <h3><a target="_blank" href="<%=article.url%>"><%=article.title%></a></h3>
+                <p class="text-justify">Description: <%= article.description%></p>
+                <p><%= article.source%></p>
+                <p class="text-justify"><%= article.author%></p>
+                <p><%= article.publish_date%></p>
             <% end %>
       </div>
 
