--- a/app/views/policies/show.html.erb
+++ b/app/views/policies/show.html.erb
@@ -1,9 +1,11 @@
-<h1><%=@policy.title%></h1>
-<h3><%=@policy.description%></h3>
+<div class="policy_header">
+  <h2 ><% @policy.candidates.each do |candidate|%>
+      <%= link_to candidate.name, candidate_path(candidate)%>
+  <% end %></h2>
+  <h1><%=@policy.title%></h1>
+  <h3><%=@policy.description%></h3>
+</div>
 
-<h2 ><% @policy.candidates.each do |candidate|%>
-    Candidate: <%= link_to candidate.name, candidate_path(candidate)%>
-<% end %></h2>
 
 <h3>Posts: <% @policy.posts.reverse.each do |post|%></h3>
   <p>Author: <%= link_to post.user.full_name, user_path(post.user) %></p>
