--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -110,7 +110,7 @@
 }
 
 .card-image {
-  box-shadow: 0 2px 5px 0 rgbaa(0,0,0,0.16),0 2px 10px 0 rgbaa(0,0,0,0.12);
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
   margin: 4px;
   margin-bottom: 10px;
 }
@@ -126,7 +126,7 @@
 }
 
 .card-image:hover {
-  box-shadow: 0 2px 5px 0 rgbaa(0,0,0,0.3),0 2px 10px 0 rgbaa(0,0,0,0.25);
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.3),0 2px 10px 0 rgba(0,0,0,0.25);
 }
 
 .candidate_container {
