--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -2,11 +2,6 @@
       <h1 class="candidate_title"><%=@candidate.name%></h1>
       <a target="_blank" href=<%=@candidate.twitter%> class="fa fa-twitter"></a>
 
-      <%= form_for @article do |f| %>
-        <input type="hidden" name="candidate[id]" value="<%=@candidate.id%>">
-        <%=f.submit "Refresh"%>
-      <% end %>
-
     <div class="candidate_container">
 
         <div class="candidate_basics">
@@ -28,11 +23,15 @@
 
         <div class="candidate_articles">
           <h2>Recent Articles</h2>
+          <%= form_for @article do |f| %>
+            <input class="refresh" type="hidden" name="candidate[id]" value="<%=@candidate.id%>">
+            <%=f.submit "Refresh"%>
+          <% end %>
             <% @candidate.articles.each do |article|%>
+                <p><%= article.publish_date%></p>
                 <h3><a target="_blank" href="<%=article.url%>"><%=article.title%></a></h3>
                 <p class="text-justify">Description: <%= article.description%></p>
                 <p><%= article.source%>: <%= article.author%></p>
-                <p><%= article.publish_date%></p>
             <% end %>
       </div>
 
