--- a/app/views/register/new.html.erb
+++ b/app/views/register/new.html.erb
@@ -2,14 +2,14 @@
   <script type="text/javascript"  src="https://register.rockthevote.com/assets/rtv-iframe.js"></script>
   <script type="text/javascript">
       RtvIframe.init({
-        partner: 38017,
+        partner: 38017
         // source: "string",
         // tracking: "string",
         // state: "string", // 2-letter state abbreviation (capital letters) e.g. "CA"
         // home_zip_code: "string", // 5-digit zip code
         // email_address: "string",
         // first_name: "string",
-        // last_name: "string",
+        // last_name: "string"
       })
   </script>
 </div>
