--- a/app/views/policies/show.html.erb
+++ b/app/views/policies/show.html.erb
@@ -1,18 +1,19 @@
 <div class="policy_header">
-  <h2 ><% @policy.candidates.each do |candidate|%>
-      <%= link_to candidate.name, candidate_path(candidate)%>
-  <% end %></h2>
   <h1><%=@policy.title%></h1>
-  <h3><%=@policy.description%></h3>
+  <h2 class="negative_margin"><% @policy.candidates.each do |candidate|%>
+    <%= link_to candidate.name, candidate_path(candidate)%>
+    <% end %></h2>
+  <h3 class="text-justify"><%=@policy.description%></h3>
+  <%= link_to "Other #{@policy.title} Policies", policies_path%>
 </div>
 
+<div class="policy_thread">
+  <h3><% @policy.posts.reverse.each do |post|%></h3>
+    <p><%=post.created_at.to_date%> :: <%= link_to post.user.full_name, user_path(post.user)%> :: <%= link_to post.title, post_path(post) %></p>
+    <p class="bit_o_left_margin bit_o_right_margin"><%= post.content%></p><br>
+  <% end %>
+</div>
 
-<h3>Posts: <% @policy.posts.reverse.each do |post|%></h3>
-  <p>Author: <%= link_to post.user.full_name, user_path(post.user) %></p>
-  <p>Title: <%= link_to post.title, post_path(post) %></p>
-  <p>Content: <%= post.content%></p><br>
-  <span>_______________</span>
-<% end %>
 
 <%= form_tag("/posts/new", method: "get") do %>
   <input type="hidden" name="policy[id]" value="<%=@policy.id%>">
@@ -20,5 +21,3 @@
     Create New Post
   </button>
 <% end %>
-
-<%= link_to "All Policies", policies_path%>
