policies page sort functional

--- a/app/views/policies/index.html.erb
+++ b/app/views/policies/index.html.erb
@@ -21,7 +21,7 @@
   </select>
   <input type="submit" name="commit" value="Policy">
 
-  <select class="policy_dropdown" name="policcy[candidate_name]" id="candidate_name">
+  <select class="policy_dropdown" name="policy[candidate_id]" id="candidate_id">
     <option></option>
     <%=@candidates.each do |candidate|%>
       <option value="<%=candidate.id%>"><%=candidate.name%></option>
