--- a/app/views/policies/show.html.erb
+++ b/app/views/policies/show.html.erb
@@ -4,7 +4,13 @@
     <%= link_to candidate.name, candidate_path(candidate)%>
     <% end %></h2>
   <h3 class="text-justify"><%=@policy.description%></h3>
-  <%= link_to "Other #{@policy.title} Policies", policies_path%>
+  <form action="/policies" method="get">
+    <button type="submit" name="button">
+      <input type="hidden" name="policy[policy_name]" value="<%=@policy.title%>">
+      <input type="hidden" name="policy[candidate_id]" value="">
+      <%= "Other #{@policy.title} Policies"%>
+    </button>
+  </form>
 </div>
 
 <div class="policy_thread">
