--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -1,4 +1,4 @@
-
+<%= javascript_include_tag "https://www.gstatic.com/charts/loader.js" %>
       <h1 id="candidate_name">
         <a target="_blank" class="candidate_title animate" href="<%=@candidate.website%>">
             <span><%=@candidate.name%></span>
@@ -62,3 +62,6 @@
       </div>
 
     </div>
+
+
+    <%# <%= line_chart Poll.group_by_day(:value).count %> %>
