--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -64,4 +64,4 @@
     </div>
 
 
-    <%# <%= line_chart Poll.group_by_day(:value).count %> %>
+  <!-- line_chart Poll.group_by_day(:value).count -->
