--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -5,10 +5,10 @@
 
 
 
-<%= form_tag("/comments/create", method: "post") do %>
-  <input type="hidden" name="post[id]" value="<%=post.id%>">
+<%= form_tag("/comments", method: "post") do %>
+  <input type="hidden" name="post[id]" value="<%=@post.id%>">
   <input type="text" name="comment[title]">
-  <textarea name="comment[description]"></textarea>
+  <textarea name="comment[content]"></textarea>
   <button class="inputbutton" type="submit">
     Deliver Comment
   </button>
