--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -129,6 +129,17 @@
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.3),0 2px 10px 0 rgba(0,0,0,0.25);
 }
 
+.out_of_race {
+  text-decoration: line-through;
+  text-decoration-style: double;
+  text-decoration-color:red;
+}
+
+.out_of_race_text {
+  color:red;
+  font-size: 12px;
+}
+
 .candidate_container {
   margin: 30px;
   display:flex;
