--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -129,15 +129,15 @@
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.3),0 2px 10px 0 rgba(0,0,0,0.25);
 }
 
-.out_of_race {
+.line_through {
   text-decoration: line-through;
-  text-decoration-style: double;
   text-decoration-color:red;
 }
 
 .out_of_race_text {
   color:red;
   font-size: 12px;
+  text-decoration:none;
 }
 
 .candidate_container {
@@ -388,5 +388,36 @@ select.policy_dropdown {
 }
 
 .red_background {
-  background-color: rgba(245, 66, 66, 0.2)
+  background-color: rgba(245, 66, 66, 0.2);
+}
+
+.blue_background {
+  background-color: rgba(12, 105, 235, 0.2);
+}
+
+.new_form_title {
+  border-radius: 3px;
+  border: 1px solid rgba(12, 105, 235, 0.2);
+}
+
+.new_form_title:focus {
+  outline:0;
+  background-color: rgba(12, 105, 235, 0.3);
+  border-radius: 3px;
+  border: 1px solid rgba(12, 105, 235, 0.2);
+}
+
+.new_form_content {
+  width: 50%;
+  border-radius: 3px;
+  border: 1px solid rgba(12, 105, 235, 0.2);
+  padding: 5px;
+}
+
+.new_form_content:focus {
+  outline:0;
+  background-color: rgba(12, 105, 235, 0.3);
+  width: 50%;
+  border-radius: 3px;
+  border: 1px solid rgba(12, 105, 235, 0.2);
 }
